[project]
name = "numbers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Panterich228", email = "filin290245@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
